# ChangeLog for sys-fs/lvm2
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.142 2008/06/23 18:54:32 armin76 Exp $

  23 Jun 2008; Raúl Porcel <armin76@gentoo.org> lvm2-2.02.37.ebuild:
  ia64/sparc stable wrt #207612

  22 Jun 2008; Markus Meier <maekke@gentoo.org> lvm2-2.02.36.ebuild:
  x86 stable, bug #207612

  21 Jun 2008; Markus Rothe <corsair@gentoo.org> lvm2-2.02.37.ebuild:
  Stable on ppc64; bug #207612

  16 Jun 2008; Jeroen Roovers <jer@gentoo.org> lvm2-2.02.37.ebuild:
  Stable for HPPA (bug #207612).

  15 Jun 2008; Tobias Klausmann <klausman@gentoo.org> lvm2-2.02.36.ebuild:
  Stable on alpha, bug #207612

  14 Jun 2008; Christoph Mende <angelos@gentoo.org> lvm2-2.02.36.ebuild:
  Stable on amd64, bug #207612

  14 Jun 2008; nixnut <nixnut@gentoo.org> lvm2-2.02.36.ebuild:
  Stable on ppc wrt bug 207612

*lvm2-2.02.37 (08 Jun 2008)

  08 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/lvm2-stop.sh-2.02.37, +lvm2-2.02.37.ebuild:
  Version bump. Fixes bugs #210879, and #214194 (same as #202058). Make sure
  you hvae the new .26 of device-mapper.

*lvm2-2.02.36 (30 Apr 2008)

  30 Apr 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/lvm.conf-2.02.36.patch, +lvm2-2.02.36.ebuild:
  Version bump per bug 219091.

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Eric Edgar (rocket, #78547) from metadata.xml.

  25 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> lvm2-2.02.33.ebuild,
  lvm2-2.02.33-r1.ebuild:
  Disable testcases now that upstream added them, because they need device
  nodes and have kernel interactions - bug 211312.

*lvm2-2.02.33-r1 (11 Feb 2008)

  11 Feb 2008; Robin H. Johnson <robbat2@gentoo.org>
  +lvm2-2.02.33-r1.ebuild:
  Fix bug #209742 so that LDFLAGS are respected by the libraries AND binaries.

  08 Feb 2008; Doug Klima <cardoe@gentoo.org> lvm2-2.02.33.ebuild: